# infra_ai

./: .env.example  .gitignore  PLAN.md  README.md  package-lock.json  package.json  requirements.txt  tailwind.config.ts
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py  mcp_server.py
apps/api/app/api/: __init__.py
apps/api/app/api/v1/: __init__.py
apps/api/app/api/v1/routes/: __init__.py  health.py  reviews.py  site_analysis.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/domain/: __init__.py
apps/api/app/domain/readiness/: __init__.py  analysis.py  evidence.py  planning_context.py  scoring.py
apps/api/app/domain/reviews/: __init__.py  store.py
apps/api/app/domain/scenarios/: __init__.py
apps/api/app/domain/site_analysis/: __init__.py
apps/api/app/integrations/: __init__.py
apps/api/app/repositories/: __init__.py
apps/api/app/schemas/: __init__.py  review.py  site.py
apps/api/app/services/: __init__.py
apps/api/tests/: conftest.py  test_api_endpoints.py  test_readiness_scoring.py
data/: README.md
docs/: DATASET_SOURCE_CANDIDATES.md  DATA_SOURCES.md  VERIFICATION_DATA_REQUIREMENTS.md  api.md  architecture.md  data-sources.md  deployment.md  responsible-ai.md
services/agents/: .env.example  README.md  pyproject.toml
services/agents/app/: __init__.py
services/agents/infraai_agents/: __init__.py  guardrails.py  intents.py  openai_adapter.py  responses.py  tools.py
services/data-pipelines/: README.md  geojson_utils.py  ingest_ookla_open_data.py  ingest_opencellid.py  ingest_osm_overpass.py  ingest_peeringdb.py  ingest_wri_power_plants.py  pyproject.toml
(+80 files in other folders)
