[project]
name = "infraai-agents"
version = "0.1.0"
description = "Future agent workflows for InfraAI SiteCompass."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.6,<3.0",
  "python-dotenv>=1.0,<2.0",
  "httpx>=0.27,<1.0",
  "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.13,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
