[project]
name = "infraai-data-pipelines"
version = "0.1.0"
description = "Future data pipelines for InfraAI SiteCompass."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2,<3.0",
  "pydantic>=2.10,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "ruff>=0.8,<1.0",
  "mypy>=1.13,<2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
